# ada-lcd

./: .SNR_Display.py.swp  .gitignore  .lora_ap_raw.sh.swp  Lab04_VR_Button_LCD_sub.py  README.md  SNR_Display.py  SNR_LCD.py  auto_ap_login.exp  ip.py  ipclock.py  lcd-demo.py  lcd_clear.py  lcd_echo.py  lora_ap_raw.sh  pi_button.py  pyproject.toml  show_lora_ap.sh  sub_mqtt_local_raw_lcd.py
env_setup/: config.txt  modules  setup_lcd.sh
