[project]
name = "ada-lcd"
version = "0.1.0"
description = ""
authors = [
    {name = "Marty@Pi",email = "marty@freedom-tek.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-charlcd (>=3.5.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
